--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
-
+<html>
+<head>
+  <title>Projektplan</title>
+</head>
+<link rel="stylesheet" type="text/css" href="stylesheet.css"
 <!--Welcome boys -->
+<body>
+
+</body>
+</html>
