Creating header and aligning links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css"
 <!--Welcome boys -->
 <body>
+<header>
+  <ul>
+    <li>
+      <a href="index.html#">Background</a>
+    </li>
+    <li>
+      <a href="index.html#">Goal</a>
+    </li>
 
+  </ul>
+  <div id="Background">
+  </div>
+</header>
 </body>
 </html>
