--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   <header>
     <ul>
       <li>
-        <a href="index.html#">Background</a>
+        <a href="index.html#Background">Background</a>
       </li>
       <li>
-        <a href="index.html#">Goal</a>
+        <a href="index.html#Base-Group">Goal</a>
       </li>
 
     </ul>
 
   </header>
   <div id="Background">
+    <embed src="ProjectPlan.pdf" width="100%" height="100%">
   </div>
+  <div id ="Base-Group">
+  </div>
+
 </body>
 </html>
