--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 <!--Welcome boys -->
 <body>
   <header>
-    <ul>
-      <li>
-        <a href="index.html#Background">Background</a>
-      </li>
-      <li>
-        <a href="index.html#Base-Group">Goal</a>
-      </li>
-
-    </ul>
-
+    <div class="dropdown">
+    <button class="dropbtn"><img src="burgermenu.png" height="20px" width="20px" /></button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
   </header>
   <div id="Background">
     <embed src="ProjectPlan.pdf" width="100%" height="100%">
