--- a/index.html
+++ b/index.html
@@ -7,20 +7,53 @@
 <!--Welcome boys -->
 <body>
   <header>
+    <h1 id="title">Group 4.C Interaction in Smart Environments</h1>
     <div class="dropdown">
     <button class="dropbtn"><img src="burgermenu.png" height="20px" width="20px" /></button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#ProjectPlan">ProjectPlan</a>
+      <a href="#Method">Method</a>
+      <a href="#Result">Result</a>
+      <a href="#Discussion">Discussion</a>
     </div>
   </div>
   </header>
-  <div id="Background">
-    <embed src="ProjectPlan.pdf" width="100%" height="100%">
+
+    <!--Typical section -->
+  <div id="Introduction" class="section">
+    <h1 class="section-title">Introduction</h1>
+    <h2 class="section-subtitle"></h2>
+    <p class="section-paragraph"></p>
+
+    <!--<embed src="ProjectPlan.pdf" width="100%" height="100%">-->
   </div>
-  <div id ="Base-Group">
+    <!--Section with link -->
+  <div id="ProjectPlan" class="section offset">
+    <h1 class="section-title">Project Plan</h1>
+    <h2 class="section-subtitle"></h2>
+    <p class="section-paragraph"></p>
   </div>
+  <div id="Method" class="section offset">
+    <h1 class="section-title">Method</h1>
+    <h2 class="section-subtitle"></h2>
+    <p class="section-paragraph"></p>
+  </div>
+  <div id="Result" class="section offset">
+    <h1 class="section-title">Result</h1>
+    <h2 class="section-subtitle"></h2>
+    <p class="section-paragraph"></p>
+  </div>
+  <div id="Discussion" class="section offset">
+    <h1 class="section-title">Discussion</h1>
+    <h2 class="section-subtitle"></h2>
+    <p class="section-paragraph"></p>
+  </div>
+  <div id="FIller" class="section offset">
+    <h1 class="section-title"></h1>
+    <h2 class="section-subtitle"></h2>
+    <p class="section-paragraph"></p>
+  </div>
+
 
 </body>
 </html>
