From pdf to page

--- a/index.html
+++ b/index.html
@@ -19,41 +19,119 @@
   </div>
   </header>
 
-    <!--Typical section -->
+    <!--Start section -->
   <div id="Introduction" class="section">
     <h1 class="section-title">Introduction</h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
-
-    <!--<embed src="ProjectPlan.pdf" width="100%" height="100%">-->
   </div>
     <!--Section with link -->
   <div id="ProjectPlan" class="section offset">
     <h1 class="section-title">Project Plan</h1>
-    <h2 class="section-subtitle"></h2>
-    <p class="section-paragraph"></p>
+    <h2 class="section-subtitle">Introduction</h2>
+    <p class="section-paragraph">Working at Volvo involves high workload which involves among other factors stress, physical strain, high
+        noise levels and high variety of heat. All of these aspects could affect workers health. A big challenge for
+        Volvo is for the workers to actually use the safety-clothing at hand, as these are too warm and the
+        workers would rather put themselves at risk when using welders instead of using protective gear.
+        To prevent users from getting too warm when welding a set of adaptive clothing could be helpful. By
+        making the clothing a part of a smart environment the temperature could be adjusted according to the
+        user in a specific situation and thereafter learn patterns of when and where the user usually gets
+        “overheated”.
+    </p>
+    <h2 class="section-subtitle">Aim and research questions</h2>
+    <p class="section-paragraph">The aim of this project is to create a smart environment that adapts the worker's temperature depending
+      on situation.
+      </br>● When exposed to heat or getting too warm, how can cooling be applied on the user?
+      </br>● What are the relevant aspects of the environment?
+      </br>● How do we know when temperature adjustment is necessary and noninvasive?
+    </p>
+    <h2 class="section-subtitle">Methods</h2>
+    <p class="section-paragraph">
+      During the project the design method used will be linear, due to the lack of time. A concept will be
+      produced, and if enough time, a prototype will be made.
+      The occupational therapy students(OT students) will be involved during the design process, offering
+      valuable input in the concept. Since the OT students have some contact with Volvo some input will be
+      given from the workers.
+    </p>
+    <h3 class="section-subsubtitle">Use Scenario</h3>
+    <p class="section-paragraph">
+      A worker is grabbing the welder, which triggers the cooling equipment both by the grabbing of the welder
+      and by the position of the worker. When the worker is welding the body temperature is rising and this also
+      triggers the equipment and is cooling the person down. Now the worker is getting too cold so the person
+      is adjusting the temperature which the equipment is acknowledging in its learning for this specific worker.
+      When the worker moves on to another task the equipment adjusts the temperature according to the outer
+      body temperature, the task and what it knows about the workers different patterns.
+    </p>
+    <h3 class="section-subsubtitle">Anticipated Design Solution that will be Demonstrated January 9-10</h3>
+    <p class="section-paragraph">
+       ● A prototype the simulate the function of the equipment.
+      </br>  ● A visual demonstration of the system and how it is learning behaviours and adjusting the
+        temperature.
+      </br>● Posters with information about the product.</p>
+    <h3 class="section-subsubtitle">Requirements</h3>
+    <p class="section-paragraph">● The user should have the possibility to adjust the amount of cooling
+    </br>● The system should learn how the user is performing its task, creating autonomous cooling
+    </br>● The wristband should be comfortable and nonivasive
+    </br>● The wristband should not obstruct the worker performing his or hers tasks</p>
+    <h3 class="section-subsubtitle">Material</h3>
+    <p class="section-paragraph">Itemised lists:
+      </br>● Thermoelectric generator. Needed for prototype to induce cooling to the users wrist
+      </br>● Temperature sensor. Indication of skin temperature of user
+      </br>● Location sensor: To invoke specific methods at different locations.
+      </br>● Regulator To regulate the input voltage of the the thermoelectric generator.
+      </br>● Softlab: To be able to create a wearable containing the thermoelectric generator and its sensors.
+      </br>● Tutoring: We desperately need help assembling the electronic components.
+    </p>
+    <h3 class="section-subsubtitle">Time Plan</h3>
+    <p class="section-paragraph">
+      <b>Table​ ​1:</b>​Project divided into weekly segments
+    </br><img src="TimePlan.png" width="800px" />
+    </p>
+    <h3 class="section-subsubtitle">Ethical Considerations</h3>
+    <p>
+      Since the device will record some data from the user some considerations is necessary. The recorded
+      data should not be accessible by anyone, apart from the system itself. The system is not supposed to
+      monitor how the workers are performing their task. The problem lies within convincing the users that their
+      data is not being used to monitor them.
+    </p>
+    <h3 class="section-subsubtitle">Expected result and/or considerations</h3>
+    <p class="section-paragraph">
+      The expected result is a wearable which helps the worker cool down during its physical tasks. The
+      concept is a device which adapts to a specific user(not enough time to implement during the course).
+    </p>
+    <h3 class="section-subsubtitle">References</h3>
+    <p class="section-paragraph">
+      Ed Hayward,(2008),Massachusetts institute of technology,MIT researchers achieve dramatic
+      increase in thermoelectric efficiency,Boston,
+    </br>Article: http://news.mit.edu/2008/thermoelectric-0320
+      </br>G. Jeffrey Snyder(2008),Small Thermoelectric Generators
+    </br>Article: http://www.electrochem.org/dl/interface/fal/fal08/fal08_p54-56.pdf
+    </p>
   </div>
+
   <div id="Method" class="section offset">
     <h1 class="section-title">Method</h1>
     <h2 class="section-subtitle"></h2>
+    <h3 class="section-subsubtitle"></h3>
     <p class="section-paragraph"></p>
   </div>
+
   <div id="Result" class="section offset">
     <h1 class="section-title">Result</h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
   </div>
+
   <div id="Discussion" class="section offset">
     <h1 class="section-title">Discussion</h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
   </div>
+
   <div id="FIller" class="section offset">
     <h1 class="section-title"></h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
   </div>
-
-
 </body>
 </html>
