added css links

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
   </div>
   </header>
 
+
     <!--Start section -->
   <div id="Introduction" class="section">
     <h1 class="section-title">Introduction</h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
   </div>
-    <!--Section with link -->
+
   <div id="ProjectPlan" class="section offset">
     <h1 class="section-title">Project Plan</h1>
     <h2 class="section-subtitle">Introduction</h2>
@@ -109,6 +110,8 @@
     </p>
   </div>
 
+
+
   <div id="Method" class="section offset">
     <h1 class="section-title">Method</h1>
     <h2 class="section-subtitle"></h2>
@@ -128,7 +131,7 @@
     <p class="section-paragraph"></p>
   </div>
 
-  <div id="FIller" class="section offset">
+  <div id="Filler" class="section offset">
     <h1 class="section-title"></h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
