Added activity model and User model

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <h1 id="title">Group 4.C Interaction in Smart Environments</h1>
     <div class="dropdown">
-    <button class="dropbtn"><img src="burgermenu.png" height="20px" width="20px" /></button>
+    <button class="dropbtn"><img src="images/burgermenu.png" height="20px" width="20px" /></button>
     <div class="dropdown-content">
       <a href="#ProjectPlan">ProjectPlan</a>
       <a href="#Method">Method</a>
@@ -63,6 +63,10 @@
       When the worker moves on to another task the equipment adjusts the temperature according to the outer
       body temperature, the task and what it knows about the workers different patterns.
     </p>
+    <h3 class="section-subtitle">User model</h3>
+    <img src="images/User-model.jpg" width="800px" />
+    <h3 class="section-subsubtitle">Activity model</h3>
+    <img src="images/activity-model.png" width="800px" />
     <h3 class="section-subsubtitle">Anticipated Design Solution that will be Demonstrated January 9-10</h3>
     <p class="section-paragraph">
        ● A prototype the simulate the function of the equipment.
@@ -86,7 +90,7 @@
     <h3 class="section-subsubtitle">Time Plan</h3>
     <p class="section-paragraph">
       <b>Table​ ​1:</b>​Project divided into weekly segments
-    </br><img src="TimePlan.png" width="800px" />
+    </br><img src="images/TimePlan.png" width="800px" />
     </p>
     <h3 class="section-subsubtitle">Ethical Considerations</h3>
     <p>
@@ -108,6 +112,7 @@
       </br>G. Jeffrey Snyder(2008),Small Thermoelectric Generators
     </br>Article: http://www.electrochem.org/dl/interface/fal/fal08/fal08_p54-56.pdf
     </p>
+
   </div>
 
 
