--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>Projektplan</title>
 </head>
-<link rel="stylesheet" type="text/css" href="stylesheet.css"
+<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+<meta charset="UTF-8">
 <!--Welcome boys -->
 <body>
   <header>
@@ -16,6 +17,7 @@
       <a href="#Result">Result</a>
       <a href="#Discussion">Discussion</a>
     </div>
+
   </div>
   </header>
 
