Added file ending

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h3 class="section-subsubtitle">Time Plan</h3>
     <p class="section-paragraph">
       <b>Table​ ​1:</b>​Project divided into weekly segments
-    </br><img src="images/TimePlan.png" width="800px" />
+    </br><img src="images/TimePlan.PNG" width="800px" />
     </p>
     <h3 class="section-subsubtitle">Ethical Considerations</h3>
     <p>
