Commented out irrelevant parts

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <button class="dropbtn"><img src="images/burgermenu.png" height="20px" width="20px" /></button>
     <div class="dropdown-content">
       <a href="#ProjectPlan">ProjectPlan</a>
-      <a href="#Method">Method</a>
+      <!--<a href="#Method">Method</a>
       <a href="#Result">Result</a>
-      <a href="#Discussion">Discussion</a>
+      <a href="#Discussion">Discussion</a>-->
     </div>
 
   </div>
@@ -23,12 +23,13 @@
 
 
     <!--Start section -->
+    <!--
   <div id="Introduction" class="section">
     <h1 class="section-title">Introduction</h1>
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
   </div>
-
+  -->
   <div id="ProjectPlan" class="section offset">
     <h1 class="section-title">Project Plan</h1>
     <h2 class="section-subtitle">Introduction</h2>
@@ -117,8 +118,7 @@
 
   </div>
 
-
-
+  <!--
   <div id="Method" class="section offset">
     <h1 class="section-title">Method</h1>
     <h2 class="section-subtitle"></h2>
@@ -143,5 +143,6 @@
     <h2 class="section-subtitle"></h2>
     <p class="section-paragraph"></p>
   </div>
+  -->
 </body>
 </html>
