Added Flow Chart

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <button class="dropbtn"><img src="images/burgermenu.png" height="20px" width="20px" /></button>
     <div class="dropdown-content">
       <a href="#ProjectPlan">ProjectPlan</a>
-      <!--<a href="#Method">Method</a>
-      <a href="#Result">Result</a>
+      <a href="#Flow-Chart">Flow Chart</a>
+      <!--<a href="#Result">Result</a>
       <a href="#Discussion">Discussion</a>-->
     </div>
 
@@ -118,14 +118,14 @@
 
   </div>
 
-  <!--
-  <div id="Method" class="section offset">
-    <h1 class="section-title">Method</h1>
+  <div id="Flow-Chart" class="section offset">
+    <h1 class="section-title">Flow Chart</h1>
+    <img src="images/Flow-Chart.jpg" width="800px" />
     <h2 class="section-subtitle"></h2>
     <h3 class="section-subsubtitle"></h3>
     <p class="section-paragraph"></p>
   </div>
-
+<!--
   <div id="Result" class="section offset">
     <h1 class="section-title">Result</h1>
     <h2 class="section-subtitle"></h2>
