--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
       The expected result is a wearable which helps the worker cool down during its physical tasks. The
       concept is a device which adapts to a specific user(not enough time to implement during the course).
     </p>
+
+      <h2 class="section-subtitle">Result</h2>
+      <h3 class="section-subtitle">Concept movie</h3>
+      <video width="80%" height="auto" controls>
+        <source src="images/Film.mp4" type="video/mp4">
+      </video>
+
+      <h3 class="section-subtitle">Prototype</h3>
+      
+
+
+    <div id="Discussion" class="section offset">
+      <h1 class="section-title">Discussion</h1>
+      <h2 class="section-subtitle"></h2>
+      <p class="section-paragraph"></p>
+    </div>
     <h3 class="section-subsubtitle">References</h3>
     <p class="section-paragraph">
       Ed Hayward,(2008),Massachusetts institute of technology,MIT researchers achieve dramatic
@@ -125,19 +141,9 @@
     <h3 class="section-subsubtitle"></h3>
     <p class="section-paragraph"></p>
   </div>
+
+
 <!--
-  <div id="Result" class="section offset">
-    <h1 class="section-title">Result</h1>
-    <h2 class="section-subtitle"></h2>
-    <p class="section-paragraph"></p>
-  </div>
-
-  <div id="Discussion" class="section offset">
-    <h1 class="section-title">Discussion</h1>
-    <h2 class="section-subtitle"></h2>
-    <p class="section-paragraph"></p>
-  </div>
-
   <div id="Filler" class="section offset">
     <h1 class="section-title"></h1>
     <h2 class="section-subtitle"></h2>
